--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   :root{
     --menuDisplay: flex;
     --navDisplay: none;
+    --pageButtonDisplay:flex;
     --mainTextSize1: 50px;
     --mainTextSize2: 140px;
     --mainTextSize3: 250px;
@@ -22,7 +23,17 @@
     --portArrow: flex;
     --direction: row;
     --portPaddingLeft: 30px;
-    --portPaddingTop: 0px;
+    --portPaddingTop: 0px;    
+    --videoWidth:120px;
+    --videoHeight:160px;
+    --miriCtgrDirection:column;
+    --miriLayoutDirection:row;
+    --miriCtgrHeight:350px;
+    --miriImgLayout:flex;
+    --miriImgSize:300px;
+    --miriImgPadding:20px;
+    --portTitleMargin:50px;
+    --portTitleMargin2:50px;
   } 
 }
 
@@ -31,6 +42,7 @@
   :root{
     --menuDisplay: flex;
     --navDisplay: none;
+    --pageButtonDisplay:none;
     --mainTextSize1: 50px;
     --mainTextSize2: 140px;
     --mainTextSize3: 250px;
@@ -40,7 +52,17 @@
     --portArrow: none;
     --direction: column;
     --portPaddingLeft: 0px;
-    --portPaddingTop: 20px;
+    --portPaddingTop: 20px;    
+    --videoWidth:100px;
+    --videoHeight:133px;    
+    --miriCtgrDirection:row;
+    --miriLayoutDirection:column;
+    --miriCtgrHeight:auto;
+    --miriImgLayout:grid;
+    --miriImgSize:calc((100vw - 120px)/3);
+    --miriImgPadding:20px;    
+    --portTitleMargin:30px;
+    --portTitleMargin2:20px;
   }
 }
 
@@ -49,6 +71,7 @@
   :root{
     --menuDisplay: none;
     --navDisplay: flex;
+    --pageButtonDisplay:none;
     --mainTextSize1: 30px;
     --mainTextSize2: 100px;
     --mainTextSize3: 200px;
@@ -59,6 +82,16 @@
     --direction: column;
     --portPaddingLeft: 0px;
     --portPaddingTop: 20px;
+    --videoWidth:100px;
+    --videoHeight:133px;    
+    --miriCtgrDirection:row;
+    --miriLayoutDirection:column;
+    --miriCtgrHeight:auto;
+    --miriImgLayout:grid;
+    --miriImgSize:calc((100vw - 120px)/3);
+    --miriImgPadding:10px;
+    --portTitleMargin:30px;
+    --portTitleMargin2:20px;
   }
 }
 
@@ -288,17 +321,64 @@
   overflow: hidden;
 }
 
+.portLayout{
+  box-sizing: border-box;
+  width: 100%;
+  max-width: 1300px;
+  display: flex;
+  align-items: flex-start;
+  padding:20px;
+  justify-content: center;
+  flex-direction: column;
+  overflow: hidden;
+  padding-top:40px;
+}
+
 .aboutTitle{
-  font-size: 20px;
+  font-size: 17px;
   font-weight: 700;
   margin-bottom:30px;
   display: flex;
   align-items: center;
 }
 
+.portLayoutTitle{
+  margin-bottom: var(--portTitleMargin);
+  font-size: 17px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+}
+
+.portLayoutTitle2{
+  
+  margin-bottom: var(--portTitleMargin2);
+  font-size: 17px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+}
+
 .aboutTitle span{
   width: 5px;
-  height: 16px;
+  height: 12px;
+  margin-top:2px;
+  margin-right: 10px;
+  background-color: #323232;
+}
+
+.portLayoutTitle span{
+  width: 5px;
+  height: 12px;
+  margin-top:2px;
+  margin-right: 10px;
+  background-color: #323232;
+}
+
+.portLayoutTitle2 span{
+  width: 5px;
+  height: 12px;
+  margin-top:2px;
   margin-right: 10px;
   background-color: #323232;
 }
@@ -313,6 +393,8 @@
   width: 115px;
   min-width: 115px;
   max-width: 115px;
+  font-weight: 500;
+  
 }
 
 .carrersDate2{
@@ -320,6 +402,7 @@
   width: 60px;
   min-width: 60px;
   max-width: 60px;
+  font-weight: 500;
 }
 
 .carrersLine{
@@ -382,12 +465,12 @@
 }
 
 .carrersContents div{
-  color:#5d5d5d;
+  color:#969696;
   margin-top:5px;
 }
 
 .paginationBar{
-  display: var(--menuDisplay);
+  display: var(--pageButtonDisplay);
   width: calc(var(--mainTextSize1)*2);
   height: 100%;
   position: absolute;
@@ -442,6 +525,14 @@
   margin-bottom: 5px;
   /* margin-bottom:10px;  */
   /* filter: brightness(0.5); */
+}
+
+.characterLayout{
+  width: 100%;
+  max-height: calc(100% - 190px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .portfolioLayout{
@@ -501,13 +592,16 @@
  
  .chColor{
   display: flex;
+  position: relative;
+  z-index: 1000;
  }
  .chColor div{
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   margin-right:5px;
-  border:3px solid #323232;
-  border-radius: 50px;
+  border:1px solid #5d5d5d;
+  border-radius: 5px;
+  margin-bottom:15px;
 
  }
 
@@ -537,7 +631,9 @@
   object-fit: cover;
   object-position: top;
   border-radius: 10px;
+  z-index: 1000;
  }
+ 
  
  .portfolioSwiper{
   top:0px;
@@ -568,13 +664,19 @@
 }
 
 .portTitle{
-  font-size: 18px;
+  font-size: 16px;
+  margin-bottom: 5px;
   font-weight: 700;
-  margin-bottom:10px;
+  position: relative;
+  z-index: 1000;
 }
 
 .portContent{
   margin-bottom: 20px;
+  color: #969696;
+  display: flex;
+  position: relative;
+  z-index: 1000;
 }
 
 .portTool{
@@ -592,15 +694,27 @@
 
 .portLink{
   height: 100%;
+  width:100%;
   display: flex;
   align-items: flex-end;
   padding-top:40px;
+}
+
+.chLink{
+  height: 100%;
+  width:100%;
+  display: flex;
+  align-items: flex-end;
+  margin-top:-70px;
 }
 
 .goButton{
   padding: 10px;
   border:1px solid #5d5d5d;
   margin-right: 10px;
+  position: relative;
+  z-index: 1000;
+  min-width: fit-content;
 }
   
 
@@ -643,4 +757,91 @@
   background-color: #fff;
   border:1px solid #323232;
   border-radius: 50px;
+}
+
+.chVideoLayout{
+  width: 100%; 
+  display: flex;
+  justify-content: center; 
+  z-index: 100;
+}
+
+.chVideoLayout div{
+  width: 100%;
+  max-width: 1300px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.characterLayout video{
+  width: var(--videoWidth);
+  height: var(--videoHeight);
+  max-width: 100%;
+  outline: 0px;
+  border: 0px;
+  clip-path: inset(1px 1px);
+}
+
+.miriLayout{
+  display: flex;
+  width: 100%;
+  flex-direction: var(--miriLayoutDirection);
+  position: relative;
+  z-index: 2000;
+}
+
+.miriCtgr{
+  display: flex;
+  flex-direction: var(--miriCtgrDirection);
+  height: var(--miriCtgrHeight);
+  margin:0px 20px 20px 0px;
+}
+
+.miriCtgrOn{
+  height: 45px;
+  margin:5px;
+  width: 120px;
+  background-color: #323232;
+  color:#fff;
+  box-shadow: 3px 3px 3px #dcdcdc;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.miriCtgrOff{
+  height: 45px;
+  margin:5px;
+  width: 120px;
+  background-color: #00000000;
+  color:#969696;
+  box-shadow: 3px 3px 3px #00000000;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.miriImgLayout{
+  width: 100%;
+  height: 100%;
+  max-height: calc(100vh - 400px);
+  display: var(--miriImgLayout);
+  grid-gap: 20px 0px;
+  grid-template-columns: 1fr 1fr 1fr;
+  overflow: auto;
+}
+
+.miriImgLayout img{
+  padding: var(--miriImgPadding);
+  box-sizing: border-box;
+  width: var(--miriImgSize);
+  min-width: var(--miriImgSize);
+  height: var(--miriImgSize);
+  min-height: var(--miriImgSize);
+  margin:0px 10px 0px 10px;
+  background-color: #fff;
+  border-radius: 10px;
+  object-fit: contain;
 }
